# Android-Article-Translator

./: .gitignore  README.md  in.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 1.json  CMakeLists.txt  config.h  https.c  https.h  macros.h  main.c  main.h  native-lib.c  utils_string.c
app/src/main/cpp/mbedtls/: CMakeLists.txt
app/src/main/java/euphoria/psycho/application/: App.java  Helper.java  MainActivity.java  NativeUtils.java  Share.java  ThreadUtils.java  test.txt
app/src/main/res/drawable/: btn.xml
app/src/main/res/layout/: activity_main.xml  btn.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
